--- a/Portfolio Page.html
+++ b/Portfolio Page.html
@@ -39,6 +39,11 @@
       <hr>
       <div class="contact-me">
         <h2>Thank you for checking out my work!</h2>
+        <br>
+        <br>
+        <a class="btn" href="https://abbystreetdesigns.com/somefunstuff.html">Videos I Designed on Canva</a>
+        <br>
+        <br>
         <a class="btn" href="index.html">Back To Homepage</a>
         <p class="contact-message">Live fully.  Breathe deeply.  Create beautifully!</p>
       </div>
