Update index.html ii

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="skill-row">
         <img class= "code" src="images/code.png" alt="coding-img">
         <h3>UX Design & Web Development</h3>
-        <p>I started to learn UX design and web development during my seven plus year career as an editor, as my desire to change the design and layout of the digital articles I was publishing grew. I've been hooked ever since and absolutely love the creative meets technical aspects of coding and UX design.   To date, I can confidently claim that I am proficient in my use of Figma and Adobe XD. I also can code using HTML, CSS, Bootstrap, and WordPress, with some basic knowledge of Javascript.  The list of skills is happily growing as we speak...</p>
+        <p>I started to learn UX design and web development during my nine year career as an editor, as my desire to change the design and layout of the digital articles I was publishing grew. I've been hooked ever since and absolutely love the creative meets technical aspects of coding and UX design.   To date, I can confidently claim that I am proficient in my use of Figma and Adobe XD. I also can code using HTML, CSS, Bootstrap, and WordPress, with some basic knowledge of Javascript.  The list of skills is happily growing as we speak...</p>
       </div>
       <div class="skill-row">
         <img class="writing" src="images/writing.png" alt="writing-editing-img">
