--- a/Portfolio Page.html
+++ b/Portfolio Page.html
@@ -16,7 +16,7 @@
     <div class="top-container">
       <h1>My UX Design Portfolio</h1>
       <h2><a href="https://www.figma.com/proto/m1egB9GLNdjezYvyogSg0H/Keto-Yummies-Prototype-12%2F22?node-id=502%3A4&scaling=scale-down&page-id=502%3A2&starting-point-node-id=502%3A4" target="_blank">The <em>Keto Yummies</em> Bakery App</h2></a> 
-      <p>Click on any of the images below to be taken to the <em>Google Docs</em> case study slide deck for this project.  Click above to go straight to the prototype.</p>
+      <p>Click on any of the images below to be taken to the <em>Google Docs</em> case study slide deck for this project.  Click the project title above to go straight to the prototype.</p>
       <a href="https://docs.google.com/presentation/d/1zjHfZdjarF63-1Sr7mpX0oKuXUQKDy6MlFIKkB-OW1w/edit?usp=sharing" target="_blank"><img class="portfolio-img"src="images/KetoYummiesHomepage.jpg" alt="keto-yummies-homepage-img"></a>
       <a href="https://docs.google.com/presentation/d/1zjHfZdjarF63-1Sr7mpX0oKuXUQKDy6MlFIKkB-OW1w/edit?usp=sharing" target="_blank"><img class="portfolio-img"src="images/KetoYummiesNavigationMenu.jpg" alt="keto-yummies-navigation-img"></a> 
       <a href="https://docs.google.com/presentation/d/1zjHfZdjarF63-1Sr7mpX0oKuXUQKDy6MlFIKkB-OW1w/edit?usp=sharing" target="_blank"><img class="portfolio-img"src="images/KetoYummiesPaymentPage.jpg" alt="keto-yummies-payment-img"></a> 
@@ -25,13 +25,13 @@
     <hr>
     <div class="middle-container">
         <h2> <a href="https://xd.adobe.com/view/0f9ff40f-84fd-459d-9831-c9b2f39e7117-5acc/" target="_blank">The <em>Happy Friends Animal Shelter</em> App and Website</h2></a> 
-        <p>Click on one of the images below to be taken to the <em>Google Docs</em> case study slide deck for this project.  Click above to go straight to the prototype.</p>
+        <p>Click on one of the images below to be taken to the <em>Google Docs</em> case study slide deck for this project.  Click the project title above to go straight to the prototype.</p>
         <a href="https://docs.google.com/presentation/d/1MmDgYmoKkQrsg85sHMien3cBsCnbcz6XgnBW8IX32v8/edit?usp=sharing" target="_blank"><img class="portfolio-img" src="images/HappyFriendsMobileHomepage.jpg" alt="HappyFriendsMobileHomepage-img"></a> 
         <a href="https://docs.google.com/presentation/d/1MmDgYmoKkQrsg85sHMien3cBsCnbcz6XgnBW8IX32v8/edit?usp=sharing" target="_blank"><img class="portfolio-img" src="images/HappyFriendsHomepageWeb.png" alt="HappyFriendsHomepageWebsite-img"></a> 
       </div>
       <hr>
         <h2> <a href="https://xd.adobe.com/view/109558ce-0ee5-4979-8f0e-ca3533c2a596-45c6/" target="_blank">The <em>Donate Your Stuff</em> App and Responsive Website</h2></a>
-        <p>Click on any of the images below to be taken to the <em>Google Docs</em> case study slide deck for this project.  Click above to go straight to the prototype.</p>
+        <p>Click on any of the images below to be taken to the <em>Google Docs</em> case study slide deck for this project.  Click the project title above to go straight to the prototype.</p>
          <a href="https://docs.google.com/presentation/d/1jxWv8U_T2rCUI4MZaV1ZU5QmAdD15ETHcGK9LW5WT50/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/DonateYourStuffMobile.jpg" alt="DonateYourStuffMobile-img"></a> 
          <a href="https://docs.google.com/presentation/d/1jxWv8U_T2rCUI4MZaV1ZU5QmAdD15ETHcGK9LW5WT50/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/DonateYourStuffTablet.jpg" alt="DonateYourStuffTablet-img"></a> 
          <a href="https://docs.google.com/presentation/d/1jxWv8U_T2rCUI4MZaV1ZU5QmAdD15ETHcGK9LW5WT50/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/DonateYourStuffWeb.jpg" alt="DonateYourStuffWeb-img"></a>  
