--- a/Portfolio Page.html
+++ b/Portfolio Page.html
@@ -37,14 +37,23 @@
          <a href="https://docs.google.com/presentation/d/1jxWv8U_T2rCUI4MZaV1ZU5QmAdD15ETHcGK9LW5WT50/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/DonateYourStuffWeb.jpg" alt="DonateYourStuffWeb-img"></a>  
       </div>
       <hr>
+        <div>
+        <h2> <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank">The <em>Cat Sitter</em> App</h2></a>
+        <p>Click on any of the images below to be taken to the <em>Google Docs</em> case study slide deck for this project.  Click the project title above to go straight to the prototype.</p>
+         <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Cat Sitter Homepage.jpg" alt="CatSitterHomepage-img"></a> 
+         <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Schedule a Cat Sitter.jpg" alt="ScheduleACatSitter-img"></a> 
+         <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Mary Jane Reviews.jpg" alt="MaryJaneReviews-img"></a>  
+         <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Mary Jane About.jpg" alt="MaryJaneAboutPage-img"></a> 
+         <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Hamburger Menu.jpg" alt="HamburgerMenu-img"></a>  
+      </div>
+  
+      <hr>    
       <div class="contact-me">
         <h2>Thank you for checking out my work!</h2>
         <a class="btn" href="index.html">Back To Homepage</a>
         <p class="contact-message">Live fully.  Breathe deeply.  Create beautifully!</p>
       </div>
     </div>
-
-  
     <div class="bottom-container">
       <p class="copyright">© 2024 Abby Street Designs</p>
     </div>
