--- a/Portfolio Page.html
+++ b/Portfolio Page.html
@@ -40,12 +40,14 @@
         <div>
         <h2> <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank">The <em>Cat Sitter</em> App</h2></a>
         <p>Click on any of the images below to be taken to the <em>Google Docs</em> case study slide deck for this project.  Click the project title above to go straight to the prototype.</p>
-         <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Cat Sitter Home Page.jpg" alt="CatSitterHomepage-img"></a> 
+         <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Cat Sitter Home Page.jpg" alt="CatSitterHomePage-img"></a> 
          <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Schedule a Cat Sitter.jpg" alt="ScheduleACatSitter-img"></a> 
          <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Mary Jane Reviews.jpg" alt="MaryJaneReviews-img"></a>  
          <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Mary Jane About.jpg" alt="MaryJaneAboutPage-img"></a> 
          <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Hamburger Menu.jpg" alt="HamburgerMenu-img"></a>  
-      </div>
+         <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Prepare for your sit.jpg" alt="PrepareForYourSit-img"></a> 
+         <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Profile.jpg" alt="Profile-img"></a> 
+        </div>
   
       <hr>    
       <div class="contact-me">
