--- a/Portfolio Page.html
+++ b/Portfolio Page.html
@@ -44,9 +44,9 @@
          <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Cat Sitter Schedule A Cat Sitter Mockup.jpg" alt="ScheduleACatSitter-img"></a> 
          <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Mary Jane Reviews.jpg" alt="MaryJaneReviews-img"></a>  
          <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Mary Jane About.jpg" alt="MaryJaneAboutPage-img"></a> 
-         <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Hamburger Menu.jpg" alt="HamburgerMenu-img"></a>  
+         <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Profile.jpg" alt="Profile-img"></a>  
          <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Prepare for your sit.jpg" alt="PrepareForYourSit-img"></a> 
-         <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Profile.jpg" alt="Profile-img"></a> 
+         <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Hamburger Menu.jpg" alt="WebsiteMenu-img"></a> 
         </div>
   
       <hr>    
