--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <hr>
     <div class="contact-me">
       <a href="Portfolio Page.html"><h2>My UX Design Portfolio</h2></a> 
+      <a class="btn" href="Portfolio Page.html">Go To Portfolio Page</a>
       <a href="Portfolio Page.html"><h3>Click <u>here</u> to see my UX design work!</h3></a> 
     </div>
     <hr>
