--- a/Portfolio Page.html
+++ b/Portfolio Page.html
@@ -38,7 +38,7 @@
       </div>
       <hr>
         <div>
-        <h2> <a href="<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/proto/ywxwdsY9LFvewneJbpCHa5/Cat-Sitter?node-id=0-1&node-type=CANVAS&t=6qWUUxFQyOdWKsU8-0&scaling=scale-down&content-scaling=fixed&starting-point-node-id=355%3A1106&show-proto-sidebar=1" target="_blank">The <em>Cat Sitter</em> App</h2></a>
+        <h2> <a href="https://www.figma.com/proto/ywxwdsY9LFvewneJbpCHa5/Cat-Sitter?node-id=0-1&node-type=CANVAS&t=6qWUUxFQyOdWKsU8-0&scaling=scale-down&content-scaling=fixed&starting-point-node-id=355%3A1106&show-proto-sidebar=1" target="_blank">The <em>Cat Sitter</em> App</h2></a>
         <p>Click on any of the images below to be taken to the <em>Google Docs</em> case study slide deck for this project.  Click the project title above to go straight to the prototype.</p>
          <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Cat Sitter Home Page.jpg" alt="CatSitterHomePage-img"></a> 
          <a href="https://docs.google.com/presentation/d/1JjlLZeX2PEIzcdVnGF-T0G4YqPAOyQ_3wn_I6dFSghs/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/Profile.jpg" alt="Profile-img"></a>  
