--- a/Portfolio Page.html
+++ b/Portfolio Page.html
@@ -55,6 +55,10 @@
         <h2>Thank you for checking out my work!</h2>
         <a class="btn" href="index.html">Back To Homepage</a>
         <p class="contact-message">Live fully.  Breathe deeply.  Create beautifully!</p>
+        <br>
+        <br>
+        <a class="btn" href="mailto:abbypantaleon@gmail.com">Contact Me</a>
+        <br>
       </div>
     </div>
     <div class="bottom-container">
