--- a/Portfolio Page.html
+++ b/Portfolio Page.html
@@ -52,7 +52,7 @@
 
         <hr>
         <div>
-        <h2> <a href="https://www.figma.com/proto/bYYksOnte48w0aeS05O3OD/Baby-s-Firsts?node-id=0-1&node-type=canvas&t=Q72djHB4IAzgYNGw-0&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2&show-proto-sidebar=1" target="_blank"><em>Baby's Firsts</em> App</h2></a>
+        <h2> <a href="https://www.figma.com/proto/bYYksOnte48w0aeS05O3OD/Baby-s-Firsts?node-id=0-1&node-type=canvas&t=Q72djHB4IAzgYNGw-0&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2&show-proto-sidebar=1" target="_blank">The <em>Baby's Firsts</em> App</h2></a>
         <p>Click on any of the images below to be taken to the <em>Google Docs</em> case study slide deck for this project.  Click the project title above to go straight to the prototype.</p>
          <a href="https://docs.google.com/presentation/d/1pFMx00U2ecynpNygpi9K_3e8k6TeppuO9aCcv3UNa1U/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/BabysFirstsOpeningPage.jpg" alt="Baby'sFirstsOpeningPage-img"></a> 
          <a href="https://docs.google.com/presentation/d/1pFMx00U2ecynpNygpi9K_3e8k6TeppuO9aCcv3UNa1U/edit?usp=sharing" target="_blank"><img class= "portfolio-img" src="images/BabysFirstsHomePage.jpg" alt="Baby'sFirstsHomePage-img"></a>  
